--- a/Proyecto Final/index.html
+++ b/Proyecto Final/index.html
@@ -7,76 +7,100 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.17/dist/css/splide.min.css">
   <link rel="stylesheet" href="style.css">
   <title>Gazzo's Ecommerce</title>
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Home</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02"
-        aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse " id="navbarTogglerDemo02">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#">Category</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">My Cart</a>
-          </li>
-        </ul>
-      </div>
+
+  <!-- NAVBAR -->
+  <nav class="navbarCustom">
+    <div class="navIzquierda">
+      <i>Icono</i>
+      <ul>
+        <li><a>Home</a></li>
+        <li><a id="btn-carrito">My Cart</a></li>
+      </ul>
+    </div>
+    <div class="navDerecha">
+      <button>Log In</button>
     </div>
   </nav>
 
-  <div id="divAgregarProducto" class="container-fluid mt-2 mt-lg-2">
-    <!-- DIV PARA AGREGAR SALUDO AL USUARIO y AGREGAR PRODUCTOS -->
-    <h1 id="saludo" class="centrarTexto"></h1>
-    <h2 class="centrarTexto">Add Product to the List:</h2>
-    <form id="formProductos" class="container-fluid m-auto w-50">
-      <div class="input-group mb-3">
-        <span class="input-group-text" id="inputGroup-sizing-default">ID</span>
-        <input id="idProducto" type="text" class="form-control" aria-label="Sizing example input"
-          aria-describedby="inputGroup-sizing-default">
-      </div>
-      <div class="input-group mb-3">
-        <span class="input-group-text" id="inputGroup-sizing-default">Name</span>
-        <input id="nombreProducto" type="text" class="form-control" aria-label="Sizing example input"
-          aria-describedby="inputGroup-sizing-default">
-      </div>
-      <div class="input-group mb-3">
-        <span class="input-group-text" id="inputGroup-sizing-default">Price</span>
-        <input id="precioProducto" type="text" class="form-control" aria-label="Sizing example input"
-          aria-describedby="inputGroup-sizing-default">
-      </div>
-      <div class="input-group mb-3">
-        <span class="input-group-text" id="inputGroup-sizing-default">Type</span>
-        <input id="tipoProducto" type="text" class="form-control" aria-label="Sizing example input"
-          aria-describedby="inputGroup-sizing-default">
-      </div>
-      <input class="btn btn-primary" value="ADD" type="submit">
-    </form>
-  </div>
+  <!-- SLIDER -->
+  <section class="splide slider-section">
+    <div class="splide__track">
+      <ul class="splide__list d-flex">
+        <li class="splide__slide d-flex align-items-center">
+          <img src="https://picsum.photos/1720/1080" alt="1">
+          <div class="overlay"></div>
+          <div class="slider-text d-flex justify-content-center align-items-center flex-column p-5">
+            <h1>Titulo1</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore minus, asperiores non voluptate
+              laboriosam nam libero sunt quidem amet molestias, harum ab sequi omnis ea doloremque debitis dolor maxime
+              perferendis.</p>
+          </div>
+        </li>
+        <li class="splide__slide d-flex align-items-center">
+          <img src="https://picsum.photos/1720/1080" alt="2">
+          <div class="overlay"></div>
+          <div class="slider-text d-flex justify-content-center align-items-center flex-column p-5">
+            <h1>Titulo2</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore minus, asperiores non voluptate
+              laboriosam nam libero sunt quidem amet molestias, harum ab sequi omnis ea doloremque debitis dolor maxime
+              perferendis.</p>
+          </div>
+        </li>
+        <li class="splide__slide d-flex align-items-center">
+          <img src="https://picsum.photos/1720/1080" alt="3">
+          <div class="overlay"></div>
+          <div class="slider-text d-flex justify-content-center align-items-center flex-column p-5">
+            <h1>Titulo3</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore minus, asperiores non voluptate
+              laboriosam nam libero sunt quidem amet molestias, harum ab sequi omnis ea doloremque debitis dolor maxime
+              perferendis.</p>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </section>
 
-  <div class="container-fluid mt-2 mt-lg-2">
-    <div class="d-flex" role="search">
-      <input id="inputFiltro" class="form-control me-2" type="search" placeholder="Filter Products" aria-label="Search">
-      <button id="btnFiltrar" class="btn btn-primary">Search</button>
+  <!-- SECCION DE FILTRO -->
+  <div class="filtro-container">
+    <div class="section-filtro d-flex flex-column justify-content-center align-items-center">
+      <h1>Search Product:</h1>
+      <input id="input-filtro" type="text">
     </div>
   </div>
-  <div class="container-fluid">
-    <div id="divProductos" class="row justify-content-around mt-2 mb-2">
-      <!-- DIV A AGREGAR CARD DE PRODUCTOS -->
+
+  <!-- seccion de productos -->
+  <div class="productos-container p-5">
+    <!-- CARDS -->
+    <div id="div-productos" class="row div-productos justify-content-around gap-3">
     </div>
   </div>
 
-  <script src="js/app.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
-    crossorigin="anonymous"></script>
+
+  <!-- MODAL DE CARRITO -->
+
+  <div id="modal-container" class="modal-container">
+    <div class="carrito-container">
+      <!-- CONTENIDO DEL CARRITO -->
+      <div class="carrito-titulo">
+        <span id="cerrar-carrito">X</span>
+        <h2>Titulo</h2>
+      </div>
+      <div class="productos-carrito">
+        <!-- ITEMS CARRITO -->
+        
+      </div>
+      <p class="total-carrito">Total: 100000</p>
+    </div>
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.17/dist/js/splide.min.js"></script>
+  <script type="module" src="js/app.js"></script>
 </body>
 
 </html>
