--- a/Proyecto Final/index.html
+++ b/Proyecto Final/index.html
@@ -5,9 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- BOOTSTRAP -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+  <!-- SLIDER -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.17/dist/css/splide.min.css">
+  <!-- MI CSS -->
   <link rel="stylesheet" href="style.css">
   <title>Gazzo's Ecommerce</title>
 </head>
@@ -28,16 +31,16 @@
     </div>
   </nav>
 
-  <!-- SLIDER -->
+  <!-- SLIDER DE IMAGENES -->
   <section class="splide slider-section">
     <div class="splide__track">
       <ul class="splide__list d-flex">
         <li class="splide__slide d-flex align-items-center">
           <img src="https://picsum.photos/1720/1080" alt="1">
           <div class="overlay"></div>
-          <div class="slider-text d-flex justify-content-center align-items-center flex-column p-5">
+          <div class="slider-text d-flex justify-content-center align-items-center flex-column p-5 w-100">
             <h1>Titulo1</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore minus, asperiores non voluptate
+            <p class="w-50 text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore minus, asperiores non voluptate
               laboriosam nam libero sunt quidem amet molestias, harum ab sequi omnis ea doloremque debitis dolor maxime
               perferendis.</p>
           </div>
@@ -45,9 +48,9 @@
         <li class="splide__slide d-flex align-items-center">
           <img src="https://picsum.photos/1720/1080" alt="2">
           <div class="overlay"></div>
-          <div class="slider-text d-flex justify-content-center align-items-center flex-column p-5">
+          <div class="slider-text d-flex justify-content-center align-items-center flex-column p-5 w-100">
             <h1>Titulo2</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore minus, asperiores non voluptate
+            <p class="w-50 text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore minus, asperiores non voluptate
               laboriosam nam libero sunt quidem amet molestias, harum ab sequi omnis ea doloremque debitis dolor maxime
               perferendis.</p>
           </div>
@@ -55,9 +58,9 @@
         <li class="splide__slide d-flex align-items-center">
           <img src="https://picsum.photos/1720/1080" alt="3">
           <div class="overlay"></div>
-          <div class="slider-text d-flex justify-content-center align-items-center flex-column p-5">
+          <div class="slider-text d-flex justify-content-center align-items-center flex-column p-5 w-100">
             <h1>Titulo3</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore minus, asperiores non voluptate
+            <p class="w-50 text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore minus, asperiores non voluptate
               laboriosam nam libero sunt quidem amet molestias, harum ab sequi omnis ea doloremque debitis dolor maxime
               perferendis.</p>
           </div>
@@ -74,7 +77,7 @@
     </div>
   </div>
 
-  <!-- seccion de productos -->
+  <!-- seccion de productos DEL ECCOMERCE -->
   <div class="productos-container p-5">
     <!-- CARDS -->
     <div id="div-productos" class="row div-productos justify-content-around gap-3">
@@ -95,10 +98,11 @@
         <!-- ITEMS CARRITO -->
         
       </div>
-      <p class="total-carrito">Total: 100000</p>
+      <!-- TOTAL CARRITO -->
+      <p class="total-carrito"></p>
     </div>
   </div>
-
+  <!-- SCRIPT DEL SLIDER -->
   <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.0.17/dist/js/splide.min.js"></script>
   <script type="module" src="js/app.js"></script>
 </body>
